# app/Http/Controllers/Api/UsersController.php
@@ -24,6 +24,16 @@ class UsersController extends Controller
      *     operationId="UsersIndex",
      *     security={ {"bearer_token": {} }},
      *     @OA\Parameter(
+     *         name="Authorization",
+     *         in="header",
+     *         description="Oauth2 token",
+     *         example="Bearer 1|iQ04fCi7gNIVCWnhgxubNJrdrIINlgnUkixEPfaA",
+     *         required=true,
+     *         @OA\Schema(
+     *             type="string"
+     *         )
+     *     ),
+     *     @OA\Parameter(
      *         name="per_page",
      *         in="query",
      *         description="Items per page.",
@@ -67,6 +77,57 @@ class UsersController extends Controller
         return UserResource::collection($paginatedData);
     }
 
+    /**
+     * Get user by ID
+     *
+     * @OA\Get(
+     *     path="/api/v1/users/{id}",
+     *     tags={"Users"},
+     *     summary="Get User",
+     *     operationId="GetUser",
+     *     security={ {"bearer_token": {} }},
+     *     @OA\Parameter(
+     *         name="Authorization",
+     *         in="header",
+     *         description="Oauth2 token",
+     *         example="Bearer 1|iQ04fCi7gNIVCWnhgxubNJrdrIINlgnUkixEPfaA",
+     *         required=true,
+     *         @OA\Schema(
+     *             type="string"
+     *         )
+     *     ),
+     *     @OA\Parameter(
+     *         name="id",
+     *         in="path",
+     *         description="User ID",
+     *         example="1",
+     *         required=true,
+     *         @OA\Schema(
+     *             type="integer",
+     *             format="int64"
+     *         )
+     *     ),
+     *     @OA\Response(
+     *          response=200,
+     *          description="Successful operation",
+     *          @OA\JsonContent(
+     *              type="object",
+     *              @OA\Property(
+     *                  type="bool",
+     *                  default=true,
+     *                  property="success"
+     *              ),
+     *              @OA\Property(
+     *                  property="user",
+     *                  ref="#/components/schemas/UserResource"
+     *              )
+     *         )
+     *     )
+     * )
+     *
+     * @param User  $user
+     * @return JsonResponse
+     */
     public function show(User $user): JsonResponse
     {
         $this->authorize('show', $user);
@@ -76,6 +137,55 @@ class UsersController extends Controller
         ], Response::HTTP_OK);
     }
 
+    /**
+     * @OA\Post(
+     *     path="/api/v1/users/",
+     *     tags={"Users"},
+     *     summary="Create User",
+     *     operationId="UserStore",
+     *     security={ {"bearer_token": {} }},
+     *     @OA\Parameter(
+     *         name="Authorization",
+     *         in="header",
+     *         description="Oauth2 token",
+     *         example="Bearer 1|iQ04fCi7gNIVCWnhgxubNJrdrIINlgnUkixEPfaA",
+     *         required=true,
+     *         @OA\Schema(
+     *             type="string"
+     *         )
+     *     ),
+     *     @OA\RequestBody(
+     *         @OA\MediaType(
+     *             mediaType="application/x-www-form-urlencoded",
+     *             @OA\Schema(
+     *                 type="object",
+     *                 ref="#/components/schemas/UserStoreRequest",
+     *             )
+     *         )
+     *     ),
+     *     @OA\Response(
+     *          response=201,
+     *          description="Successful operation",
+     *          @OA\JsonContent(
+     *              type="object",
+     *              @OA\Property(
+     *                  type="bool",
+     *                  default=true,
+     *                  property="success"
+     *              ),
+     *              @OA\Property(
+     *                  property="user",
+     *                  ref="#/components/schemas/UserResource"
+     *              )
+     *         )
+     *     ),
+     *      @OA\Response(response=400, description="Bad request"),
+     *      @OA\Response(response=422, description="Unprocessable Entity")
+     * )
+     *
+     * @param  UserRequest $request
+     * @return JsonResponse
+     */
     public function store(UserStoreRequest $request): JsonResponse
     {
         $this->authorize('store', auth()->user());
@@ -87,24 +197,108 @@ class UsersController extends Controller
         ], Response::HTTP_CREATED);
     }
 
-
-    public function update(Request $request, User $user): JsonResponse
+    /**
+     * @OA\Put(
+     *     path="/api/v1/users/{id}",
+     *     tags={"Users"},
+     *     summary="Edit User",
+     *     operationId="UserUpdate",
+     *     security={ {"bearer_token": {} }},
+     *     @OA\Parameter(
+     *         name="Authorization",
+     *         in="header",
+     *         description="Oauth2 token",
+     *         example="Bearer 1|iQ04fCi7gNIVCWnhgxubNJrdrIINlgnUkixEPfaA",
+     *         required=true,
+     *         @OA\Schema(
+     *             type="string"
+     *         )
+     *     ),
+     *     @OA\RequestBody(
+     *         @OA\MediaType(
+     *             mediaType="application/x-www-form-urlencoded",
+     *             @OA\Schema(
+     *                 type="object",
+     *                 ref="#/components/schemas/UserStoreRequest",
+     *             )
+     *         )
+     *     ),
+     *     @OA\Response(
+     *          response=200,
+     *          description="Successful operation",
+     *          @OA\JsonContent(
+     *              type="object",
+     *              @OA\Property(
+     *                  type="bool",
+     *                  default=true,
+     *                  property="success"
+     *              ),
+     *              @OA\Property(
+     *                  property="user",
+     *                  ref="#/components/schemas/UserResource"
+     *              )
+     *         )
+     *     ),
+     *      @OA\Response(response=400, description="Bad request"),
+     *      @OA\Response(response=422, description="Unprocessable Entity")
+     * )
+     *
+     * @param  UserRequest $request
+     * @return JsonResponse
+     */
+    public function update(UserStoreRequest $request, User $user): JsonResponse
     {
-        $this->authorize('update', $user->id);
-        $user->update($request->all());
+        $this->authorize('update', $user);
+        $user->update($request->validated());
         return response()->json([
             'status' => 'success',
             'data' => new UserResource($user)
         ], Response::HTTP_OK);
     }
 
+    /**
+     * @OA\Delete(
+     *     path="/api/v1/users/{id}",
+     *     tags={"Users"},
+     *     summary="Delete User",
+     *     operationId="UserDelete",
+     *     security={ {"bearer_token": {} }},
+     *     @OA\Parameter(
+     *         name="Authorization",
+     *         in="header",
+     *         description="Oauth2 token",
+     *         example="Bearer 1|iQ04fCi7gNIVCWnhgxubNJrdrIINlgnUkixEPfaA",
+     *         required=true,
+     *         @OA\Schema(
+     *             type="string"
+     *         )
+     *     ),
+     *     @OA\Parameter(
+     *         name="id",
+     *         in="path",
+     *         description="User ID",
+     *         example="1",
+     *         required=true,
+     *         @OA\Schema(
+     *             type="numeric"
+     *         )
+     *     ),
+     *     @OA\Response(
+     *          response=204,
+     *          description="Successful operation",
+     *     ),
+     * )
+     *
+     * @param User  $user
+     * @return JsonResponse
+     */
     public function destroy(User $user): JsonResponse
     {
-        $this->authorize('destroy', $user->id);
+        $this->authorize('destroy', $user);
         $user->delete();
         return response()->json([
             'status' => 'success',
             'message' => 'User deleted successfully.'
-        ], Response::HTTP_NO_CONTENT);
+        ], Response::HTTP_OK);
     }
 }
